<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:id="@+id/activity_login_ScreenView">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_UserNameHere"/>

    <EditText
        android:id="@+id/activity_login_UserNameEditText"
        android:hint="@string/activity_login_UserNameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/activity_login_PassDoodleHere"/>

    <com.grimnirdesigns.passdoodle_unsecure.app.DrawingBoardView
        android:id="@+id/activity_login_DrawingBoardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/activity_login_ClearDoodleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_login_ClearDoodleButton"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/activity_login_SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/activity_login_SubmitButton"/>

    </RelativeLayout>

</LinearLayout>
